--- a/Networking-Final/Networking-Final/Networking-Final.vcxproj
+++ b/Networking-Final/Networking-Final/Networking-Final.vcxproj
@@ -128,9 +128,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="pool.cpp" />
+    <ClCompile Include="socklib_generic.cpp" />
+    <ClCompile Include="socklib_win32.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="pool.h" />
+    <ClInclude Include="socklib.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
